--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
+    "chalk": "^2.0.1",
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "mysql": "^2.13.0",
